--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,17 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
